<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        tools:text="#150 Mewtwo"
        style="@style/labelDetail"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/mewtwo"/>
    </android.support.v7.widget.CardView>

    <TextView
        android:text="@string/lbl_description"
        style="@style/labelDetail"/>

    <View style="@style/hr"></View>

    <TextView
        style="@style/labelDesc"
        tools:text="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>

    <View style="@style/hr"></View>

    <TextView
        style="@style/labelDetail"
        android:text="@string/lbl_skills"/>

    <View style="@style/hr"></View>

    <LinearLayout
        style="@style/container_skills">

        <LinearLayout
            style="@style/container_skills_child">

            <TextView
                style="@style/skills_title"
                tools:text="3"/>

            <TextView
                style="@style/skills_desc"
                android:text="@string/lbl_hp"/>
        </LinearLayout>

        <LinearLayout
            style="@style/container_skills_child">

            <TextView
                style="@style/skills_title"
                tools:text="3"/>

            <TextView
                style="@style/skills_desc"
                android:text="@string/lbl_speed"/>
        </LinearLayout>
    </LinearLayout>

    <View style="@style/hr"></View>

    <LinearLayout
        style="@style/container_skills">

        <LinearLayout
            style="@style/container_skills_child">

            <TextView
                style="@style/skills_title"
                tools:text="3"/>

            <TextView
                style="@style/skills_desc"
                android:text="@string/lbl_attack"/>
        </LinearLayout>

        <LinearLayout
            style="@style/container_skills_child">

            <TextView
                style="@style/skills_title"
                tools:text="3"/>

            <TextView
                style="@style/skills_desc"
                android:text="@string/lbl_defense"/>
        </LinearLayout>
    </LinearLayout>

    <View style="@style/hr"></View>
</LinearLayout>